--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
         </picture>
 
         <!-- Flecha para indicar que hay más contenido haciendo scrosll -->
-        <img class="flechita" src="img/" />
+        <img class="flechita" src="img/flechita.svg" />
 
         <!-- Flechita con link interno(ancla) -->
         <a href="#abajo"></a>
-        <img class="flechita" src="img/" />
+        <img class="flechita" src="img/flechita.svg" />
 
         <p id="abajo">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque,
