--- a/index.html
+++ b/index.html
@@ -60,61 +60,59 @@
         <p class="main__slogan">
           Lorem ipsum dolor sit amet consectetur. Enim fusce tincidunt
           consectetur nunc amet lobortis. Tempus iaculis ipsum quis ut amet
-          ornare porta convallis enim. Urna phasellus morbi consectetur./p>
-          <!-- Imagenes en paralelo -->
-
-          <!-- Imagenes izquierda -->
-          <picture class="main__imagen01">
-            <!-- smartphone -->
-            <source
-              srcset="
-                img/smartphone/IMG-comida01.webp    1x,
-                img/smartphone/IMG-comida01@2x.webp 2x,
-                img/smartphone/IMG-comida01@3x.webp 3x
-              "
-              media="(min-width:320px) and (orientation:portrait)"
-            />
-
-            <!-- desktop -->
-            <source
-              srcset="
-                img/smartphone/IMG-comida01.webp    1x,
-                img/smartphone/IMG-comida01@2x.webp 2x
-              "
-              media="(min-width:1000px)"
-            />
-            <img src="" alt="" />
-          </picture>
-          <!-- Imagenes derecha -->
-          <picture class="main__imagen02">
-            <!-- smartphone -->
-            <source
-              srcset="
-                img/smartphone/IMG-comida02.webp    1x,
-                img/smartphone/IMG-comida02@2x.webp 2x,
-                img/smartphone/IMG-comida02@3x.webp 3x
-              "
-              media="(min-width:320px) and (orientation:portrait)"
-            />
-
-            <!-- desktop -->
-            <source
-              srcset="
-                    img/smartphone/IMG-comida02.webp    1x,
-                    img/smartphone/IMG-comida02@2x.webp 2x 2x
-                "
-              media="(min-width:1000px)"
-            />
-            <img src="" alt="" />
-          </picture>
-
-          <!-- Tercer imagen -->
-
-          <!-- TItulo de FOOD -->
+          ornare porta convallis enim. Urna phasellus morbi consectetur.
         </p>
+        <!-- Imagenes en paralelo -->
 
-        <h2 class="main__food">FOOD</h2>
-        <!-- Imagenes izquierda columna 5 -->
+        <!-- Imagenes izquierda -->
+        <picture class="main__imagen01">
+          <!-- smartphone -->
+          <source
+            srcset="
+              img/smartphone/IMG-comida01.webp    1x,
+              img/smartphone/IMG-comida01@2x.webp 2x,
+              img/smartphone/IMG-comida01@3x.webp 3x
+            "
+            media="(min-width:320px) and (orientation:portrait)"
+          />
+
+          <!-- desktop -->
+          <source
+            srcset="
+              img/smartphone/IMG-comida01.webp    1x,
+              img/smartphone/IMG-comida01@2x.webp 2x
+            "
+            media="(min-width:1000px)"
+          />
+          <img src="" alt="" />
+        </picture>
+        <!-- Imagenes derecha -->
+        <picture class="main__imagen02">
+          <!-- smartphone -->
+          <source
+            srcset="
+              img/smartphone/IMG-comida02.webp    1x,
+              img/smartphone/IMG-comida02@2x.webp 2x,
+              img/smartphone/IMG-comida02@3x.webp 3x
+            "
+            media="(min-width:320px) and (orientation:portrait)"
+          />
+
+          <!-- desktop -->
+          <source
+            srcset="
+                    img/smartphone/IMG-comida02.webp    1x,
+                    img/smartphone/IMG-comida02@2x.webp 2x
+                "
+            media="(min-width:1000px)"
+          />
+          <img src="" alt="" />
+        </picture>
+
+        <!-- Tercer imagen -->
+
+        <!-- TItulo de FOOD -->
+
         <picture class="main__imagen03">
           <!-- smartphone -->
           <source
@@ -136,6 +134,8 @@
           />
           <img src="" alt="" />
         </picture>
+        <h2 class="main__food">FOOD</h2>
+
 
         <!-- TItulo de FOOD -->
         <h2 class="main__comida">COMIDA</h2>
@@ -156,7 +156,7 @@
           <source
             srcset="
                             img/smartphone/IMG-comida04.webp    1x,
-                            img/smartphone/IMG-comida04@2x.webp 2x 2x
+                            img/smartphone/IMG-comida04@2x.webp 2x
                         "
             media="(min-width:1000px)"
           />
@@ -167,13 +167,13 @@
         <img class="flechita" src="img/flechita.svg" />
 
         <!-- Flechita con link interno(ancla) -->
-        <a href="#abajo"></a>
+        <!-- <a href="#abajo"></a>
         <img class="flechita" src="img/flechita.svg" />
 
         <p id="abajo">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque,
           dignissimos?
-        </p>
+        </p> -->
       </main>
       <!-- FOOTER, zona inferior que se repite en todos los HTML -->
       <footer>
